--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   "author": "Wujj",
   "license": "ISC",
   "dependencies": {
+    "@loadable/component": "^5.10.2",
     "axios": "0.18.0",
+    "history": "^4.9.0",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "react-router": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
